<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.developframework</groupId>
    <artifactId>kite</artifactId>
    <version>0.13-SNAPSHOT</version>
    <modules>
        <module>kite-core</module>
        <module>kite-spring</module>
        <module>kite-spring-boot-starter</module>
    </modules>
    <packaging>pom</packaging>

    <name>Kite Framework</name>
    <url>https://github.com/developframework/kite</url>
    <description>JSON和XML的结构化生成器</description>
    <inceptionYear>2018</inceptionYear>

    <developers>
        <developer>
            <name>qiuzhenhao</name>
            <email>408000511@qq.com</email>
            <organization>developframework</organization>
            <organizationUrl>http://blog.qiushuicloud.xyz</organizationUrl>
        </developer>
    </developers>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/developframework/kite</url>
    </issueManagement>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git@github.com:developframework/kite.git</connection>
        <developerConnection>scm:git:git@github.com:developframework/kite.git</developerConnection>
        <url>https://github.com/developframework/kite</url>
        <tag>${project.version}</tag>
    </scm>

    <properties>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.compilerVersion>${java.version}</maven.compiler.compilerVersion>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>

        <version.expression>1.3.0-SNAPSHOT</version.expression>
        <version.lombok>1.18.6</version.lombok>
        <version.jackson>2.9.8</version.jackson>
        <version.dom4j>1.6.1</version.dom4j>
        <version.slf4j-api>1.7.25</version.slf4j-api>
        <version.servlet-api>2.5</version.servlet-api>
        <version.spring>5.1.5.RELEASE</version.spring>
        <version.spring-boot>2.1.3.RELEASE</version.spring-boot>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${version.lombok}</version>
                <scope>provided</scope>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${version.jackson}</version>
            </dependency>
            <dependency>
                <groupId>dom4j</groupId>
                <artifactId>dom4j</artifactId>
                <version>${version.dom4j}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${version.slf4j-api}</version>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>servlet-api</artifactId>
                <version>${version.servlet-api}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-webmvc</artifactId>
                <version>${version.spring}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>${version.spring-boot}</version>
            </dependency>
            <dependency>
                <groupId>com.github.developframework</groupId>
                <artifactId>expression</artifactId>
                <version>${version.expression}</version>
            </dependency>
            <dependency>
                <groupId>com.github.developframework</groupId>
                <artifactId>kite-core</artifactId>
                <version>0.13-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.github.developframework</groupId>
                <artifactId>kite-spring</artifactId>
                <version>0.13-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.github.developframework</groupId>
                <artifactId>kite-spring-boot-starter</artifactId>
                <version>0.13-SNAPSHOT</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${version.lombok}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>

            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>

            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>